<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jalberssonplazas.baloncesto.registroActivity">

    <TableRow
        android:layout_marginTop="@dimen/marginTop"
        >
        <TextView
            android:text="@string/nombreEquipo"
            android:textSize="@dimen/tamanioLabel"
            />
        <EditText
            android:id="@+id/etxtNombre"
            android:hint="@string/hint"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginBottom="@dimen/marginLeft"
            />
        <TextView />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/ciudad"
            android:textSize="@dimen/tamanioLabel"
            />
        <EditText
            android:id="@+id/etxtCiudad"
            android:hint="@string/hint"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginBottom="@dimen/marginLeft"
            />
        <TextView />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/nroJugadores"
            android:textSize="@dimen/tamanioLabel"
            />
        <EditText
            android:id="@+id/etxtNjugadores"
            android:hint="@string/hint"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginBottom="@dimen/marginLeft"
            android:inputType="number"
            />
        <TextView />
    </TableRow>
    <Button
        android:id="@+id/btnMarcador"
        android:text="@string/marcador"
        android:layout_marginTop="@dimen/marginTop"
        />
    <Button
        android:id="@+id/btnFacebook"
        android:background="@drawable/facebook"
        />
</TableLayout>
