<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_marcador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jalberssonplazas.baloncesto.marcadorActivity">

    <TextView
        android:id="@+id/txtNombreEquipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnMas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subir2"
            android:layout_marginLeft="@dimen/marginTop"
            />
        <Button
            android:id="@+id/btnMas3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subir3"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txtMarcador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/letraMarcador"
        android:text="@string/textoMarcador"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnBajar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bajar2"
            android:layout_marginLeft="@dimen/marginTop"
            />
        <Button
            android:id="@+id/btnBajar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bajar3"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        />
</LinearLayout>
